# LTTC-Homework--QD

./: README.md  analysis  analysis.f90  parameters.mod  propagate  propagate.f90
doublewell/: .potential.un~  .wavepacket.un~  energy  plot_survival.gn  potential  survival  wavepacket
harmonic/: .wavepacket.un~  energy  norm  plot_energy.gn  plot_survival.gn  survival  wavepacket  wavepacket~
report/: figures.pptx  references.bib  report.aux  report.blg  report.fdb_latexmk  report.fls  report.tex
