set title "Energy Components Over Time"
set xlabel "Time, fs"
set ylabel "Energy, a.u."
set key outside

set grid
set style data lines
set xrange [0:100]

plot 'energy' using 1:2 with lines title "E pot", \
     '' using 1:3 with lines title "E kin", \
     '' using 1:4 with lines title "E total"

pause -1